# xdg-desktop-portal-dde

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  patch_dmabuf_header.py
.reuse/: dep5
.tx/: config  transifex.yaml
LICENSES/: LGPL-2.1-or-later.txt
archlinux/: PKGBUILD
cmake/: DWaylandScanner.cmake
cmake/modules/: FindEpoxy.cmake  FindGBM.cmake  FindPipeWire.cmake
data/: CMakeLists.txt  dde.portal  org.freedesktop.impl.portal.desktop.dde.cmake.in
debian/: changelog  control  rules
misc/: dde.portal  org.freedesktop.impl.portal.desktop.dde.service  xdg-desktop-portal-dde.service  xdg-desktop-portal-dde.service.in
misc/translations/: lupdate.sh
misc/translations/translations/: xdg-desktop-portal-dde_ar.ts  xdg-desktop-portal-dde_az.ts  xdg-desktop-portal-dde_bn.ts  xdg-desktop-portal-dde_ca.ts  xdg-desktop-portal-dde_de.ts  xdg-desktop-portal-dde_de_DE.ts  xdg-desktop-portal-dde_en.ts  xdg-desktop-portal-dde_es.ts  xdg-desktop-portal-dde_et.ts  xdg-desktop-portal-dde_fi.ts  xdg-desktop-portal-dde_fr.ts  xdg-desktop-portal-dde_gl_ES.ts  xdg-desktop-portal-dde_he.ts  xdg-desktop-portal-dde_hu.ts  xdg-desktop-portal-dde_ja.ts  xdg-desktop-portal-dde_kab.ts  xdg-desktop-portal-dde_kk.ts  xdg-desktop-portal-dde_lo.ts  xdg-desktop-portal-dde_lt.ts  xdg-desktop-portal-dde_ne.ts  xdg-desktop-portal-dde_nl.ts  xdg-desktop-portal-dde_pl.ts  xdg-desktop-portal-dde_pt.ts  xdg-desktop-portal-dde_pt_BR.ts  xdg-desktop-portal-dde_ru.ts  xdg-desktop-portal-dde_sl.ts  xdg-desktop-portal-dde_sq.ts  xdg-desktop-portal-dde_tr.ts  xdg-desktop-portal-dde_uk.ts  xdg-desktop-portal-dde_vi.ts  xdg-desktop-portal-dde_zh_CN.ts  xdg-desktop-portal-dde_zh_HK.ts  xdg-desktop-portal-dde_zh_TW.ts
src/: CMakeLists.txt  access.cpp  access.h  accessdialog.cpp  accessdialog.h  account.cpp  account.h  appchooser.cpp  appchooser.h  appchooserdelegate.cpp  appchooserdialog.cpp  appchooserdialog.h  appchooserdialogitem.cpp  appchooserdialogitem.h  appchoosermodel.cpp  appchoosermodel.h  background.cpp  background.h  ddesktopportal.cpp  ddesktopportal.h  ddesktopprotal.cpp  ddesktopprotal.h  desktopportal.cpp  desktopportal.h  email.cpp  email.h  filechooser.cpp  filechooser.h  globalshortcut.cpp  globalshortcut.h  globalshotcut.cpp  globalshotcut.h  inhibit.cpp  inhibit.h  lockdown.cpp  lockdown.h  notification.cpp  notification.h  notificationservice.cpp  notificationservice.h  (+46 more)
src/wayland/: Background.qml  CMakeLists.txt  OutputListView.qml  ScreenList.qml  ScreencastChooserWindow.qml  ToplevelList.qml  abstractpipewirestream.cpp  abstractpipewirestream.h  abstractwaylandportal.h  amhelper.cpp  amhelper.h  dbushelpers.h  fpslimit.c  fpslimit.h  loggings.cpp  loggings.h  mpvvideocontroller.cpp  mpvvideocontroller.h  mpvvideoitem.cpp  mpvvideoitem.h  outputpipewirestream.cpp  outputpipewirestream.h  pipewirecore.cpp  pipewirecore.h  pipewirestream.cpp  pipewirestream.h  pipewiretimer.c  pipewiretimer.h  pipewireutils.cpp  pipewireutils.h  portalcommon.h  portalwaylandcontext.cpp  portalwaylandcontext.h  remotedesktopsession.cpp  remotedesktopsession.h  request2.cpp  request2.h  screencastchooser.cpp  screencastchooser.h  screencastcontext.cpp  (+18 more)
src/wayland/icons/: portal-screencast.dci
src/wayland/protocols/: foreigntoplevellist.cpp  foreigntoplevellist.h  imagecapturesource.cpp  imagecapturesource.h  imagecopycapture.cpp  imagecopycapture.h  linuxdmabufer.cpp  linuxdmabufer.h  personalizationmanager.cpp  screencopy.cpp  screencopy.h  shmbuffer.cpp  shmbuffer.h  treelandcapture.cpp  wallpapermanagerclient.cpp  wallpapermanagerclient.h
